fix: unreadable labels of checkboxes in readonly view

--- a/bread/static/design/carbon_design/scss/styles.scss
+++ b/bread/static/design/carbon_design/scss/styles.scss
@@ -102,9 +102,12 @@ td .bx--form-item {
 }
 
 // prevent disabled fields form becoming unreadable
-fieldset[readonly=true] :disabled {
+fieldset[readonly] {
     color: initial !important;
     cursor: auto !important;
+    .bx--label--disabled {
+        color: initial !important;
+    }
 }
 
 @keyframes notification {
